baml_language/crates/baml_tests/snapshots/diagnostic_errors/anyfunction/baml_tests__diagnostic_errors__anyfunction__01_lexer__anyfunction.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "BEP-062"
Colon ":"
Word "baml"
Dot "."
Word "AnyFunction"
Is "is"
Word "a"
Word "compiler"
Word "builtin"
Dot "."
Word "It"
Word "cannot"
Word "be"
Word "implemented"
Slash "/"
Slash "/"
Word "by"
Word "hand"
LParen "("
Word "E0153"
RParen ")"
Word "and"
Word "cannot"
Word "be"
Word "used"
Word "as"
Word "a"
Word "generic"
Word "bound"
LParen "("
Word "E0154"
RParen ")"
Word "on"
Slash "/"
Slash "/"
Word "functions"
Comma ","
Word "classes"
Comma ","
Word "impl"
Word "generics"
Comma ","
Word "or"
Word "associated"
Word "types"
Dot "."
Class "class"
Word "MyTool"
LBrace "{"
Word "name"
Word "string"
RBrace "}"
Implements "implements"
Word "baml"
Dot "."
Word "AnyFunction"
For "for"
Word "MyTool"
LBrace "{"
RBrace "}"
Function "function"
Word "pick"
Less "<"
Word "T"
Extends "extends"
Word "baml"
Dot "."
Word "AnyFunction"
Greater ">"
LParen "("
Word "f"
Colon ":"
Word "T"
RParen ")"
Arrow "->"
Word "T"
Throws "throws"
Word "never"
LBrace "{"
Return "return"
Word "f"
RBrace "}"
Class "class"
Word "Holder"
Less "<"
Word "T"
Extends "extends"
Word "baml"
Dot "."
Word "AnyFunction"
Greater ">"
LBrace "{"
Word "f"
Word "T"
RBrace "}"
Interface "interface"
Word "Registry"
LBrace "{"
Word "type"
Word "Callee"
Extends "extends"
Word "baml"
Dot "."
Word "AnyFunction"
RBrace "}"
Slash "/"
Slash "/"
Word "BEP-062"
Colon ":"
Word "AnyFunction"
Word "coercion"
Word "failures"
Dot "."
Word "The"
Word "derived"
Word "conformance"
Word "checks"
Word "the"
Slash "/"
Slash "/"
Function "function"
Error "'"
Word "s"
Return "return"
Word "against"
Word "the"
Word "Returns"
Word "pin"
Word "and"
Word "its"
Throws "throws"
Word "against"
Word "the"
Slash "/"
Slash "/"
Word "Throws"
Word "pin"
LParen "("
Word "both"
Word "covariant"
RParen ")"
Semicolon ";"
Word "non-functions"
Word "never"
Word "conform"
Semicolon ";"
Word "existential"
Slash "/"
Slash "/"
Word "widening"
Word "only"
Word "goes"
Word "narrow-to-wide"
Dot "."
Class "class"
Word "ToolError"
LBrace "{"
Word "message"
Word "string"
RBrace "}"
Class "class"
Word "Doc"
LBrace "{"
Word "title"
Word "string"
RBrace "}"
Function "function"
Word "web_search"
LParen "("
Word "q"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "Doc"
LBracket "["
RBracket "]"
Throws "throws"
Word "ToolError"
LBrace "{"
If "if"
Word "q"
EqualsEquals "=="
Quote "\""
Word "boom"
Quote "\""
LBrace "{"
Throw "throw"
Word "ToolError"
LBrace "{"
Word "message"
Colon ":"
Quote "\""
Word "no"
Word "results"
Quote "\""
RBrace "}"
RBrace "}"
Return "return"
LBracket "["
Word "Doc"
LBrace "{"
Word "title"
Colon ":"
Word "q"
RBrace "}"
RBracket "]"
RBrace "}"
Function "function"
Word "main"
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "never"
LBrace "{"
Let "let"
Word "bad_ret"
Colon ":"
Word "baml"
Dot "."
Word "AnyFunction"
Less "<"
Word "Returns"
Equals "="
Word "string"
Greater ">"
Equals "="
Word "web_search"
Let "let"
Word "bad_throws"
Colon ":"
Word "baml"
Dot "."
Word "AnyFunction"
Less "<"
Word "Throws"
Equals "="
Word "never"
Greater ">"
Equals "="
Word "web_search"
Let "let"
Word "not_a_fn"
Colon ":"
Word "baml"
Dot "."
Word "AnyFunction"
Equals "="
IntegerLiteral "42"
Let "let"
Word "narrow"
Colon ":"
Word "baml"
Dot "."
Word "AnyFunction"
Less "<"
Word "Returns"
Equals "="
Word "Doc"
LBracket "["
RBracket "]"
Greater ">"
Equals "="
Word "web_search"
Let "let"
Word "bad_widen"
Colon ":"
Word "baml"
Dot "."
Word "AnyFunction"
Less "<"
Word "Returns"
Equals "="
Word "string"
Greater ">"
Equals "="
Word "narrow"
Return "return"
IntegerLiteral "0"
RBrace "}"
