baml_language/crates/baml_tests/snapshots/diagnostic_errors/anyfunction/baml_tests__diagnostic_errors__anyfunction__01_lexer__bans.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "BEP-062"
Colon ":"
Word "baml"
Dot "."
Word "AnyFunction"
Is "is"
Word "a"
Word "compiler"
Word "builtin"
Dot "."
Word "It"
Word "cannot"
Word "be"
Word "implemented"
Slash "/"
Slash "/"
Word "by"
Word "hand"
LParen "("
Word "E0153"
RParen ")"
Word "and"
Word "cannot"
Word "be"
Word "used"
Word "as"
Word "a"
Word "generic"
Word "bound"
LParen "("
Word "E0154"
RParen ")"
Word "on"
Slash "/"
Slash "/"
Word "functions"
Comma ","
Word "classes"
Comma ","
Word "impl"
Word "generics"
Comma ","
Word "or"
Word "associated"
Word "types"
Dot "."
Class "class"
Word "MyTool"
LBrace "{"
Word "name"
Word "string"
RBrace "}"
Implements "implements"
Word "baml"
Dot "."
Word "AnyFunction"
For "for"
Word "MyTool"
LBrace "{"
RBrace "}"
Function "function"
Word "pick"
Less "<"
Word "T"
Extends "extends"
Word "baml"
Dot "."
Word "AnyFunction"
Greater ">"
LParen "("
Word "f"
Colon ":"
Word "T"
RParen ")"
Arrow "->"
Word "T"
Throws "throws"
Word "never"
LBrace "{"
Return "return"
Word "f"
RBrace "}"
Class "class"
Word "Holder"
Less "<"
Word "T"
Extends "extends"
Word "baml"
Dot "."
Word "AnyFunction"
Greater ">"
LBrace "{"
Word "f"
Word "T"
RBrace "}"
Interface "interface"
Word "Registry"
LBrace "{"
Word "type"
Word "Callee"
Extends "extends"
Word "baml"
Dot "."
Word "AnyFunction"
RBrace "}"
