baml_language/crates/baml_tests/snapshots/diagnostic_errors/anyfunction/baml_tests__diagnostic_errors__anyfunction__01_lexer__coercion.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "BEP-062"
Colon ":"
Word "AnyFunction"
Word "coercion"
Word "failures"
Dot "."
Word "The"
Word "derived"
Word "conformance"
Word "checks"
Word "the"
Slash "/"
Slash "/"
Function "function"
Error "'"
Word "s"
Return "return"
Word "against"
Word "the"
Word "Returns"
Word "pin"
Word "and"
Word "its"
Throws "throws"
Word "against"
Word "the"
Slash "/"
Slash "/"
Word "Throws"
Word "pin"
LParen "("
Word "both"
Word "covariant"
RParen ")"
Semicolon ";"
Word "non-functions"
Word "never"
Word "conform"
Semicolon ";"
Word "existential"
Slash "/"
Slash "/"
Word "widening"
Word "only"
Word "goes"
Word "narrow-to-wide"
Dot "."
Class "class"
Word "ToolError"
LBrace "{"
Word "message"
Word "string"
RBrace "}"
Class "class"
Word "Doc"
LBrace "{"
Word "title"
Word "string"
RBrace "}"
Function "function"
Word "web_search"
LParen "("
Word "q"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "Doc"
LBracket "["
RBracket "]"
Throws "throws"
Word "ToolError"
LBrace "{"
If "if"
Word "q"
EqualsEquals "=="
Quote "\""
Word "boom"
Quote "\""
LBrace "{"
Throw "throw"
Word "ToolError"
LBrace "{"
Word "message"
Colon ":"
Quote "\""
Word "no"
Word "results"
Quote "\""
RBrace "}"
RBrace "}"
Return "return"
LBracket "["
Word "Doc"
LBrace "{"
Word "title"
Colon ":"
Word "q"
RBrace "}"
RBracket "]"
RBrace "}"
Function "function"
Word "main"
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "never"
LBrace "{"
Let "let"
Word "bad_ret"
Colon ":"
Word "baml"
Dot "."
Word "AnyFunction"
Less "<"
Word "Returns"
Equals "="
Word "string"
Greater ">"
Equals "="
Word "web_search"
Let "let"
Word "bad_throws"
Colon ":"
Word "baml"
Dot "."
Word "AnyFunction"
Less "<"
Word "Throws"
Equals "="
Word "never"
Greater ">"
Equals "="
Word "web_search"
Let "let"
Word "not_a_fn"
Colon ":"
Word "baml"
Dot "."
Word "AnyFunction"
Equals "="
IntegerLiteral "42"
Let "let"
Word "narrow"
Colon ":"
Word "baml"
Dot "."
Word "AnyFunction"
Less "<"
Word "Returns"
Equals "="
Word "Doc"
LBracket "["
RBracket "]"
Greater ">"
Equals "="
Word "web_search"
Let "let"
Word "bad_widen"
Colon ":"
Word "baml"
Dot "."
Word "AnyFunction"
Less "<"
Word "Returns"
Equals "="
Word "string"
Greater ">"
Equals "="
Word "narrow"
Return "return"
IntegerLiteral "0"
RBrace "}"
